add auth token to endpoints
