# models/User.go
@@ -2,19 +2,25 @@ package models
 
 import (
 	"time"
-
-	"github.com/dgrijalva/jwt-go"
 )
 
 type User struct {
-	ID       int    `json:"id"`
+	ID        int       `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"created_at"`
+}
+
+type CreateUserRequest struct {
 	Name     string `json:"name"`
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
 
-type Token struct {
-	UserID    int       `json:"user_id"`
-	ExpiresAt time.Time `json:"expires_at"`
-	jwt.StandardClaims
+type UserDTO struct {
+	ID        int       `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"created_at"`
 }
