# rest/server.go
@@ -13,40 +13,34 @@ import (
 	"github.com/swaggo/gin-swagger/swaggerFiles"
 )
 
-// @title           Swagger Example API
+// @title           Swagger API
 // @version         1.0
-// @description     This is a sample server celler server.
-// @termsOfService  http://swagger.io/terms/
-
+// @description     Social media pet project.
 // @contact.name   API Support
-// @contact.url    http://www.swagger.io/support
-// @contact.email  support@swagger.io
-
-// @license.name  Apache 2.0
-// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
-
+// @contact.url    t.me/rON2_webdev
+// @contact.email  abbosamritdidnov@gmail.com
 // @host      localhost:8080
-// @BasePath  /api/v1
-
-// @securityDefinitions.basic  BasicAuth
+// @BasePath  /
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 func New(cfg config.Config, s storage.StorageI) (srv *http.Server) {
 	h := handlers.NewHandler(cfg, s)
 
 	r := gin.Default()
-	// r.Use(AuthMiddleware)
-	r.GET("login", h.Login)
+	r.POST("login", h.Login)
+	r.POST("/register", h.CreateUser)
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	users := r.Group("/users")
+	users := r.Group("/users").Use(h.AuthMiddleware)
 	{
-		users.POST("/", h.CreateUser)
 		users.GET("/:id", h.GetUser)
 		users.GET("/email/:email", h.GetUserByEmail)
 		users.GET("/", h.GetAllUsers)
 		users.GET("/:id/posts", h.GetPostsByUser)
-
 	}
-	posts := r.Group("/posts")
+	posts := r.Group("/posts").Use(h.AuthMiddleware)
 	{
 		posts.POST("/", h.CreatePost)
 		posts.GET("/:id", h.GetPost)
@@ -55,12 +49,14 @@ func New(cfg config.Config, s storage.StorageI) (srv *http.Server) {
 		posts.GET("/:id/likes", h.GetPostLikes)
 		posts.GET("/:id/likes_count", h.GetPostLikesCount)
 	}
-	likes := r.Group("/likes")
+
+	likes := r.Group("/likes").Use(h.AuthMiddleware)
 	{
 		likes.POST("/", h.CreateLike)
 		likes.DELETE("/:post_id/:user_id", h.DeleteLike)
 	}
-	comments := r.Group("/comments")
+
+	comments := r.Group("/comments").Use(h.AuthMiddleware)
 	{
 		comments.POST("/", h.CreateComment)
 	}
@@ -72,33 +68,3 @@ func New(cfg config.Config, s storage.StorageI) (srv *http.Server) {
 	fmt.Println("Running on port " + cfg.HTTPPort)
 	return
 }
-
-// func (h *handler) AuthMiddleware(c *gin.Context) {
-// 	token := c.Request.Header.Get("Authorization")
-// 	if token == "" {
-// 		c.JSON(http.StatusUnauthorized, gin.H{
-// 			"error": "no token",
-// 		})
-// 		c.Abort()
-// 		return
-// 	}
-// 	claims := &models.Token{}
-// 	tkn, err := jwt.ParseWithClaims(token, claims, func(token *jwt.Token) (interface{}, error) {
-// 		return []byte("secret"), nil
-// 	})
-// 	if err != nil {
-// 		c.JSON(http.StatusUnauthorized, gin.H{
-// 			"error": err.Error(),
-// 		})
-// 		c.Abort()
-// 		return
-// 	}
-// 	if !tkn.Valid {
-// 		c.JSON(http.StatusUnauthorized, gin.H{
-// 			"error": "invalid token",
-// 		})
-// 		c.Abort()
-// 		return
-// 	}
-// 	c.Next()
-// }
